--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "devDependencies": {
-    "@types/react": "19.0.12",
-    "@types/react-dom": "^19.0.4"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "^19.1.0"
-  },
+  "name": "numix-pro",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "cd NumixPro-main && npm run dev",
     "build": "cd NumixPro-main && npm run build",
     "start": "cd NumixPro-main && npm run start",
     "lint": "cd NumixPro-main && npm run lint"
+  },
+  "dependencies": {
+    "next": "15.1.0",
+    "react": "^19",
+    "react-dom": "^19"
+  },
+  "devDependencies": {
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
